infra/kubernetes/base/gateway-api/core-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: core-envoy-gateway
  labels:
    app.kubernetes.io/name: core-gateway
    app.kubernetes.io/part-of: appkiosk-core
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
